--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.4", features = ["ws", "headers"] }
+axum = { version = "0.4", features = ["ws", "headers", "json"] }
 tokio = { version = "1.0", features = ["full"] }
 tower-http = { version = "0.2.0", features = ["auth"] }
 clap = { version = "3", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 askama = "0.10"
 linemux = "0.2"
